--- a/src/store.html
+++ b/src/store.html
@@ -43,13 +43,13 @@
         <div class="store__header">
           <ul class="store__categories">
             <li class="store__category-item">
-              <button class="store__category-button store__category-button_active">Домики</button>
+              <button class="store__category-button">Домики</button>
             </li>
             <li class="store__category-item">
               <button class="store__category-button">Лежанки</button>
             </li>
             <li class="store__category-item">
-              <button class="store__category-button">Игрушки</button>
+              <button class="store__category-button store__category-button_active">Игрушки</button>
             </li>
             <li class="store__category-item">
               <button class="store__category-button">Корма</button>
@@ -136,6 +136,16 @@
       </address>
     </div>
   </footer>
+
+  <div class="modal-overlay">
+    <div class="modal">
+      <div class="modal__content">
+        <h2>Корзина</h2>
+        <ul class="modal__cart-items"></ul>
+      </div>
+    </div>
+    <button class="modal-overlay__close-button">&times;</button>
+  </div> 
 </body>
 
 </html>
